# PluralPlanner

./: .drone.yml  .gitignore  Cargo.toml  Node.toml  README.md
.github/workflows/: ci.yml
assets/: dark_theme.ron  light_theme.ron  theme_default_colors_light_ext.ron  theme_default_ext.ron
assets/themes/theme_default/: theme_default_colors_dark_ext.ron
assets/themes/theme_redox/: theme_redox_colors_ext.ron  theme_redox_ext.ron
src/: base_state.rs  data.rs  keys.rs  main.rs  main_state.rs  main_view.rs  overview_state.rs  overview_view.rs  task_list.rs  task_state.rs  task_view.rs  theme.rs
src/states/: base_state.rs  mod.rs  overview_state.rs  task_state.rs
src/views/: main_view.rs  mod.rs  overview_view.rs  task_view.rs
static/: index.html
theme/: theme.css
