[package]
name = "doit"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
edition = "2018"
description = "Task app based on OrbTk."
repository = "https://codeberg.org/pinhead-galaxy/doit"
readme = "README.md"
license = "GPLv3"
keywords = [
    "tasks"
]

[profile.dev]
opt-level = 1

[features]
debug = ["orbtk/debug"]
light = []

[dependencies]
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch= "develop" }
# orbtk = { path = "../orbtk" }
serde = "1.0.114"
serde_derive = "1.0.114"

[package.metadata.bundle]
name = "Doit"
identifier = "flovanco.doit"
short_description = "Task app based on OrbTk."