[package]
name = "plural_planner"
version = "0.1.0"
authors = ["Florian Blasius <flovanpt@posteo.de>"]
edition = "2018"
description = "Task app based on OrbTk."
repository = "https://github.com/PluralTools/PluralPlanner"
readme = "README.md"
license = "GPLv3"
keywords = [
    "tasks"
]

[profile.dev]
opt-level = 1

[features]
debug = ["orbtk/debug"]
light = []

[dependencies]
orbtk = { git = "https://github.com/redox-os/orbtk.git", branch= "develop" }
#orbtk = { path = "../orbtk" }
serde = "1.0.114"
serde_derive = "1.0.114"

[package.metadata.bundle]
name = "PluralPlanner"
identifier = "pluraltools.pluralplanner"
short_description = "Task app based on OrbTk."